correzioni su script di creazione rsyslog

--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -1,8 +1,10 @@
 # Stateless configuration for initramfs and maintenance scripts
 # Changes to this file requires an initramfs update
 
+# TODO: alcuni parametri è meglio in futuro tirarli fuori e mettere un bind del docker-compose o in overlay
 SYSLOG_IP=192.168.124.1
 SYSLOG_PORT=5140
+#
 LIVENET_ROOT_IP=$(ip route | awk  '/default/ { print $3 }')
 KERNEL=$( (readlink /boot/initrd.img || readlink /initrd.img) | sed -e 's/^.*initrd.img-//')
 STATENFS=/states                   # nfs share that holds states
@@ -243,6 +245,7 @@ do_update_alternatives() {
         ${LIVENET_DIR}${filename}.nfs.default; do
         if [ -r ${f} ]; then
             update-alternatives --set ${key} ${f}
+            logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "do_update_alternatives" "Setting ${key} to ${f} "
             return
         fi
     done
@@ -381,3 +384,5 @@ export FLAG_NFS
 export FLAG_RELEASE
 export UPDATE_FLAG
 export RELEASE
+export SYSLOG_IP
+export SYSLOG_PORT
