--- a/node/overlay/etc/systemd/system/ln-install.service
+++ b/node/overlay/etc/systemd/system/ln-install.service
@@ -7,8 +7,8 @@ ConditionPathExists=/ro/bin
 [Service]
 Type=oneshot
 EnvironmentFile=/etc/livenet/livenet.conf
-#ExecStart=/usr/bin/ln-client --install-with-gui
-ExecStart=/usr/bin/ln-client --install
+ExecStart=/usr/bin/ln-client --install-with-gui
+#ExecStart=/usr/bin/ln-client --install
 RemainAfterExit=yes
 
 [Install]
