--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -268,6 +268,9 @@ parse_kernel_args() {
         livenet_root=*)
             export LIVENET_ROOT=${x#livenet_root=}
             ;;
+        livenet_port=*)
+            export LIVENET_PORT=${x#livenet_port=}
+            ;;
         nfsroot=*)
             export LIVENET_ROOT=${x#nfsroot=}
             ;;
@@ -300,12 +303,13 @@ mount_livenet_root() {
 
 mount_livenet_releases() {
     mkdir -p ${LIVENET_RELEASES_MNT}
-
+    NFS_PORT=2049
+    [[ ! $LIVENET_PORT ]] || NFS_PORT=${LIVENET_PORT}
     mountpoint -q ${LIVENET_RELEASES_MNT} && umount ${LIVENET_RELEASES_MNT}
     BACKUPSERVER=${LIVENET_ROOT%%:*}
     echo "Mounting ${BACKUPSERVER}:${BACKUP} on ${LIVENET_RELEASES_MNT}"
     logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Mounting ${BACKUPSERVER}:${BACKUP} on ${LIVENET_RELEASES_MNT}"
-    mount -o vers=4,proto=tcp,ro,timeo=30,retry=0,soft,rsize=262144 ${BACKUPSERVER}:${BACKUP} ${LIVENET_RELEASES_MNT}
+    mount -o vers=4,proto=tcp,ro,timeo=30,retry=0,soft,rsize=262144,port=${NFS_PORT} ${BACKUPSERVER}:${BACKUP} ${LIVENET_RELEASES_MNT}
     mountpoint -q ${LIVENET_RELEASES_MNT} || (
         echo "ERROR: skip upgrade"
         logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "ERROR: skip upgrade"
@@ -372,6 +376,7 @@ export PROFILE
 export DEVICE
 export LIVENET_ROOT
 export LIVENET_ROOT_IP
+export LIVENET_PORT
 export LIVENET_DEBUG
 export LIVENET_RELEASES_MNT
 export ROOT
