--- a/node/overlay/etc/rsyncd.conf
+++ b/node/overlay/etc/rsyncd.conf
@@ -7,6 +7,6 @@ max connections = 20
     timeout = 300
 [version]
   path = /etc/livenet
-  comment = for the curent server version
+  comment = for the current server version
   read only = true
   timeout = 300
