--- a/node/boot_config/grub.cfg
+++ b/node/boot_config/grub.cfg
@@ -10,11 +10,12 @@ set menu_color_normal=white/black
 set menu_color_highlight=black/light-gray
 set timeout=5
 
-menuentry "Ubuntu 22.04 (Jammy) - live" {
+menuentry "Ubuntu 22.04 (Jammy) - 2049" {
   set gfxpayload=keep
   linux /vmlinuz ro livenet_root=192.168.124.1:/ boot=livenet livenet_profile=default net.ifnames=0 biosdevname=0
   initrd /initrd.img
 }
+
 
 menuentry "Ubuntu 22.04 (Jammy) - install" {
   set gfxpayload=keep
